--- a/index.htm
+++ b/index.htm
@@ -3,47 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tres en raya</title>
+    <title>Juego tres en raya</title>
+    <link rel="stylesheet" href="estilos.css">
     <script src="juego.js" defer></script>
-    <style>
-        header {
-            text-align: center;
-        }
-        #tablero {
-            display: grid;
-            grid-template-columns: 100px 100px 100px;
-            grid-template-rows: 100px 100px 100px;
-            gap: 10px;
-            justify-content: center;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        .casilla {
-            border: 1px solid black;
-            border-radius: 10px;
-            display: flex;
-            font-size: 70px;
-            justify-content: center;
-            align-items: center;
-            user-select: none;
-        }
-    </style>
-   
 </head>
 <body>
-    <header>
-        <h1>Tres en raya</h1>
-    </header>
-    <div id="tablero">
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
-        <div class="casilla"></div>
+    <header id="titulo"><h1>Tres en raya</h1></header>
+    <main>
+        <header>
+            <div>Juegan: <span id="juegan"></span>
+                <input type="button" value="nueva" id="nueva">
+                <div>Victorias X: <span id="victoriasX">0</span></div>
+                <div>Victorias O: <span id="victoriasO">0</span></div>
+                <input type="button" value="reiniciar" id="reiniciar">
+            </div>
+        </header>
+        <section id="partida">
+            <div id="c1" class="casilla"></div>
+            <div id="c2" class="casilla"></div>
+            <div id="c3" class="casilla"></div>
+            <div id="c4" class="casilla"></div>
+            <div id="c5" class="casilla"></div>
+            <div id="c6" class="casilla"></div>
+            <div id="c7" class="casilla"></div>
+            <div id="c8" class="casilla"></div>
+            <div id="c9" class="casilla"></div>
+        </section>
+    </main>
+    <div id="resultado">
+        <h2>Final de partida</h2>
+        <p></p>
+        <input type="button" value="cerrar" id="cerrar">
     </div>
-    
 </body>
 </html>
